# parsec

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: parseToken.cpp
include/: functional.hpp  output.hpp  parsec.hpp
include/parsec/: basic.hpp  primitive.hpp  token.hpp
src/: model.cpp
